--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
+    "next-videos": "1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
     "swr": "^2.0.0",
     "typescript": "4.9.4"
   },
