--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-player": "^2.11.0",
+    "sharp": "^0.31.3",
     "swr": "^2.0.0",
     "typescript": "4.9.4"
   },
