--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,15 @@
 name: Cypress Test
 
 on: [push]
-jobs: 
+jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
       - name: Cypress.io
         uses: cypress-io/github-action@v5.0.5
         with:
-            start: npm start
+          spec: cypress/e2e/home.cy.ts
+          start: npm start
