--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.3.0
       - name: Cypress.io
-        uses: cypress-io/github-action@37c511bc322f112c2dd629d3610f4f096bc80096
-        # uses: cypress-io/github-action@v5.0.5
+        uses: cypress-io/github-action@v5.0.5
         with:
-          build: npm run build 
-          start: npm start
+          run: npm start
