--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,5 @@ jobs:
       - name: Cypress Test
         uses: cypress-io/github-action@v5.0.5
         with:
+          build: npm run build
           start: npm start
