--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.2.2",
+    "classnames": "^2.3.2",
     "cypress": "^12.4.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
